import util.FileIO;
import util.TextUI;
import java.util.ArrayList;


public class Main {
    public static void main(String[] args) {
        Chill chill = new Chill();
       chill.startSequence("Welcome!");

       /* FileIO io = new FileIO();
        TextUI ui = new TextUI();
        String[] test = io.readUser("data/userData/Danny.csv", 3);
        for(int i = 0; i < 3; i++){
            ui.displayMessage(test[i]);
        }
*/
    }

}
       /* LoadDataFromFile myLoader = new LoadDataFromFile();

        //initier alle brugere
        ArrayList <User> users = new ArrayList<User>();

        users = myLoader.loadDataFromSource();

        //Initier alle film.csv
        ArrayList <Movies> movies = new ArrayList<Movies>();

        LoadMovies myMovieLoader = new LoadMediaFromFIle();

        movies = myMovieLoader.loadMedia();
            }
        }
*/



