abstract class Media {

    String title;
    double rating;
    int year;
    String genre;

    public Media(String tilte, double rating, int year, String genre){
        this.title = title;
        this.genre = genre;
        this.year = year;


}
}
